--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18",
     "vite": "^7.3.1",
     "wrangler": "^4.59.2"
